--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "es6-promise": "^4.2.8",
     "mpvue": "^2.0.0",
     "vuex": "^3.0.1"
   },
